--- a/src/ulp/Vistas/FormularioAlumno.form
+++ b/src/ulp/Vistas/FormularioAlumno.form
@@ -6,7 +6,7 @@
     <Property name="iconifiable" type="boolean" value="true"/>
     <Property name="resizable" type="boolean" value="true"/>
     <Property name="title" type="java.lang.String" value="Gesti&#xf3;n Alumnos"/>
-    <Property name="toolTipText" type="java.lang.String" value="mmmmmmm"/>
+    <Property name="toolTipText" type="java.lang.String" value="Rellene todos los campos"/>
     <Property name="frameIcon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
       <Image iconType="3" name="/Images/alumno.jpg"/>
     </Property>
