--- a/src/ulp/Vistas/FormularioNotas.form
+++ b/src/ulp/Vistas/FormularioNotas.form
@@ -200,21 +200,113 @@
           <Properties>
             <Property name="maximumRowCount" type="int" value="11"/>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="11">
-                <StringItem index="0" value="0"/>
-                <StringItem index="1" value="1"/>
-                <StringItem index="2" value="2"/>
-                <StringItem index="3" value="3"/>
-                <StringItem index="4" value="4"/>
-                <StringItem index="5" value="5"/>
-                <StringItem index="6" value="6"/>
-                <StringItem index="7" value="7"/>
-                <StringItem index="8" value="8"/>
-                <StringItem index="9" value="9"/>
-                <StringItem index="10" value="10"/>
+              <StringArray count="100">
+                <StringItem index="0" value="0.1"/>
+                <StringItem index="1" value="0.2"/>
+                <StringItem index="2" value="0.3"/>
+                <StringItem index="3" value="0.4"/>
+                <StringItem index="4" value="0.5"/>
+                <StringItem index="5" value="0.6"/>
+                <StringItem index="6" value="0.7"/>
+                <StringItem index="7" value="0.8"/>
+                <StringItem index="8" value="0.9"/>
+                <StringItem index="9" value="1.0"/>
+                <StringItem index="10" value="1.0"/>
+                <StringItem index="11" value="1.2"/>
+                <StringItem index="12" value="1.3"/>
+                <StringItem index="13" value="1.4"/>
+                <StringItem index="14" value="1.5"/>
+                <StringItem index="15" value="1.6"/>
+                <StringItem index="16" value="1.7"/>
+                <StringItem index="17" value="1.8"/>
+                <StringItem index="18" value="1.9"/>
+                <StringItem index="19" value="2"/>
+                <StringItem index="20" value="2.1"/>
+                <StringItem index="21" value="2.2"/>
+                <StringItem index="22" value="2.3"/>
+                <StringItem index="23" value="2.4"/>
+                <StringItem index="24" value="2.5"/>
+                <StringItem index="25" value="2.6"/>
+                <StringItem index="26" value="2.7"/>
+                <StringItem index="27" value="2.8"/>
+                <StringItem index="28" value="2.9"/>
+                <StringItem index="29" value="3"/>
+                <StringItem index="30" value="3.1"/>
+                <StringItem index="31" value="3.2"/>
+                <StringItem index="32" value="3.3"/>
+                <StringItem index="33" value="3.4"/>
+                <StringItem index="34" value="3.5"/>
+                <StringItem index="35" value="3.6"/>
+                <StringItem index="36" value="3.7"/>
+                <StringItem index="37" value="3.8"/>
+                <StringItem index="38" value="3.9"/>
+                <StringItem index="39" value="4"/>
+                <StringItem index="40" value="4.1"/>
+                <StringItem index="41" value="4.2"/>
+                <StringItem index="42" value="4.3"/>
+                <StringItem index="43" value="4.4"/>
+                <StringItem index="44" value="4.5"/>
+                <StringItem index="45" value="4.6"/>
+                <StringItem index="46" value="4.7"/>
+                <StringItem index="47" value="4.8"/>
+                <StringItem index="48" value="4,9"/>
+                <StringItem index="49" value="5"/>
+                <StringItem index="50" value="5.1"/>
+                <StringItem index="51" value="5.2"/>
+                <StringItem index="52" value="5.3"/>
+                <StringItem index="53" value="5.4"/>
+                <StringItem index="54" value="5.5"/>
+                <StringItem index="55" value="5.6"/>
+                <StringItem index="56" value="5.7"/>
+                <StringItem index="57" value="5.8"/>
+                <StringItem index="58" value="5.9"/>
+                <StringItem index="59" value="6"/>
+                <StringItem index="60" value="6.1"/>
+                <StringItem index="61" value="6.2"/>
+                <StringItem index="62" value="6.3"/>
+                <StringItem index="63" value="6.4"/>
+                <StringItem index="64" value="6.5"/>
+                <StringItem index="65" value="6.6"/>
+                <StringItem index="66" value="6.7"/>
+                <StringItem index="67" value="6.8"/>
+                <StringItem index="68" value="6.9"/>
+                <StringItem index="69" value="7"/>
+                <StringItem index="70" value="7.1"/>
+                <StringItem index="71" value="7.2"/>
+                <StringItem index="72" value="7.3"/>
+                <StringItem index="73" value="7.4"/>
+                <StringItem index="74" value="7.5"/>
+                <StringItem index="75" value="7.6"/>
+                <StringItem index="76" value="7.7"/>
+                <StringItem index="77" value="7.8"/>
+                <StringItem index="78" value="7.9"/>
+                <StringItem index="79" value="8"/>
+                <StringItem index="80" value="8.1"/>
+                <StringItem index="81" value="8.2"/>
+                <StringItem index="82" value="8.3"/>
+                <StringItem index="83" value="8.4"/>
+                <StringItem index="84" value="8.5"/>
+                <StringItem index="85" value="8.6"/>
+                <StringItem index="86" value="8.7"/>
+                <StringItem index="87" value="8.8"/>
+                <StringItem index="88" value="8.9"/>
+                <StringItem index="89" value="9"/>
+                <StringItem index="90" value="9.1"/>
+                <StringItem index="91" value="9.2"/>
+                <StringItem index="92" value="9.3"/>
+                <StringItem index="93" value="9.4"/>
+                <StringItem index="94" value="9.5"/>
+                <StringItem index="95" value="9.6"/>
+                <StringItem index="96" value="9.7"/>
+                <StringItem index="97" value="9.8"/>
+                <StringItem index="98" value="9.9"/>
+                <StringItem index="99" value="10"/>
               </StringArray>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="comboNotaActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
