--- a/src/ulp/Vistas/FormularioDeInscripcion.form
+++ b/src/ulp/Vistas/FormularioDeInscripcion.form
@@ -28,7 +28,11 @@
   </NonVisualComponents>
   <Properties>
     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-      <Border info="null"/>
+      <Border info="org.netbeans.modules.form.compat2.border.BevelBorderInfo">
+        <BevelBorder>
+          <Color PropertyName="highlightInner" blue="0" green="0" red="0" type="rgb"/>
+        </BevelBorder>
+      </Border>
     </Property>
     <Property name="closable" type="boolean" value="true"/>
     <Property name="iconifiable" type="boolean" value="true"/>
