--- a/src/ulp/Vistas/FormularioNotas.form
+++ b/src/ulp/Vistas/FormularioNotas.form
@@ -3,7 +3,12 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
   <Properties>
     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-      <Border info="null"/>
+      <Border info="org.netbeans.modules.form.compat2.border.BevelBorderInfo">
+        <BevelBorder>
+          <Color PropertyName="highlightOuter" blue="cc" green="cc" red="0" type="rgb"/>
+          <Color PropertyName="highlightInner" blue="0" green="0" red="0" type="rgb"/>
+        </BevelBorder>
+      </Border>
     </Property>
     <Property name="closable" type="boolean" value="true"/>
     <Property name="iconifiable" type="boolean" value="true"/>
